testing fix for unwanted fontawesome laptop icon showing up on iphones

--- a/css/main.css
+++ b/css/main.css
@@ -146,7 +146,7 @@ hr.star-primary:after {
 }
 
 hr.topHR:after {
-  content: "\f109";
+  /*content: "\f109";*/
   background-color: black;
 }
 hr.aboutHR {
